--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "API desenvolvida para atender o Front-end Notes React",
   "main": "index.js",
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
-    "start": "pm2-runtime start ecosystem.config.js --env production",
+    "start": "node ./src/server.js",
     "dev": "nodemon ./src/server.js",
     "migrate": "knex migrate:latest"
   },
@@ -20,7 +23,6 @@
     "jsonwebtoken": "^9.0.0",
     "knex": "^2.4.2",
     "multer": "^1.4.5-lts.1",
-    "pm2": "^5.3.0",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.1.4"
   },
